--- a/.github/workflows/deploy-simple.yml
+++ b/.github/workflows/deploy-simple.yml
@@ -1,6 +1,9 @@
-name: Deploy to GitHub Pages (Simple)
+name: Deploy to GitHub Pages
 
 on:
+  schedule:
+    # Run daily at 00:00 UTC
+    - cron: '0 0 * * *'
   push:
     branches: [ main ]
   workflow_dispatch:
